# trail-lines

./: Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  cargo
.github/: workflowstest.yml
.github/workflows/: publish.yml  releases.yml  test.yml
src/: main.rs
