[package]
name = "trail_lines"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Trail lines displays last n lines of given standard input"
repository = "https://github.com/akankshasainics/trail-lines"
readme = "README.md"
keywords = ["last-lines", "n-lines"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trail"
path = "src/main.rs"

[dependencies]
crossterm = "0.25.0"
clap = { version = "3.2.22", features = ["derive"] }
